--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -93,6 +93,14 @@
                 android:name="android.app.lib_name"
                 android:value="" />
         </activity>
+                <activity
+            android:name=".EditAccountActivity"
+            android:exported="false"
+            android:label="Modifica dati">
+            <meta-data
+                android:name="android.app.lib_name"
+                android:value="" />
+        </activity>
     </application>
 
 </manifest>
