--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -22,6 +22,7 @@
         tools:targetApi="31">
         <activity
             android:name=".Profile"
+            android:label="I miei dati"
             android:exported="false">
             <meta-data
                 android:name="android.app.lib_name"
@@ -56,7 +57,7 @@
         <activity
             android:name=".SearchActivity"
             android:exported="false"
-            android:label="Ricerca">
+            android:label="Ricerca annuncio">
             <meta-data
                 android:name="android.app.lib_name"
                 android:value="" />
@@ -72,7 +73,7 @@
         <activity
             android:name=".InsertionActivity"
             android:exported="false"
-            android:label="Registrati">
+            android:label="Viasualizza annuncio">
             <meta-data
                 android:name="android.app.lib_name"
                 android:value="" />
@@ -80,7 +81,7 @@
         <activity
             android:name=".NewInsertionActivity"
             android:exported="false"
-            android:label="Crea/modifica inserzione">
+            android:label="Crea/modifica annuncio">
             <meta-data
                 android:name="android.app.lib_name"
                 android:value="" />
